# type_safe_builder

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
type-safe-builder-code/: Cargo.toml
type-safe-builder-code/src/: all_field_setters_impl.rs  build_impl.rs  builder_factory_impl.rs  builder_state_struct.rs  builder_struct.rs  lib.rs  parse.rs
type-safe-builder-code/src/generators/: all_field_setters.rs  builder_struct.rs  factory.rs  mod.rs  state_struct.rs
type-safe-builder-code/src/tests/: mod.rs
type-safe-builder-macro/: Cargo.toml
type-safe-builder-macro/src/: lib.rs
type-safe-builder-macro/tests/: compile_failure.rs  macro-test.rs
type-safe-builder-macro/tests/compile_failure/: assign_field_twice.rs  assign_field_twice.stderr  default_as_standard_with_mandatory_field_not_set.rs  default_as_standard_with_mandatory_field_not_set.stderr  no_default_as_default.rs  no_default_as_default.stderr  not_respecting_where_clause.rs  not_respecting_where_clause.stderr  single_assignment_in_a_struct_multi_by_default.stderr
