[package]
name = "type-safe-builder-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
type-safe-builder-code = { path = "../type-safe-builder-code" }
[dev-dependencies]
trybuild = "1.0.85"

[lib]
proc-macro = true
